--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 
     <body>
 
+        <header>
+            <h1 class="tituloPrincipal">Barbería Alura</h1>
+        </header>
+
         <img id='banner' src='banner.jpg'>
 
         <div class="principal">
 
-            <h1>Sobre la Barbería Alura</h1>
+            <h2 class="tituloCentralizado">Sobre la Barbería Alura</h2>
         
             <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. </p>
 
@@ -24,7 +28,7 @@
         </div>
 
         <div class="diferenciales">
-        <h2>Diferenciales</h2>
+        <h3 class="tituloCentralizado">Diferenciales</h3>
             <ul>
                 <li class="items">Atencion personalizada a los clientes</li>
                 <li class="items">Espacio diferenciado</li>
