--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 class="tituloPrincipal">Barbería Alura</h1>
         </header>
 
-        <img id='banner' src='banner.jpg'>
+        <img id='banner' src='banner/banner.jpg'>
 
         <div class="principal">
 
@@ -36,7 +36,7 @@
                 <li class="items">Profesionales calificados</li>
             </ul>
 
-            <img src="diferenciales.jpg" class="imagenDiferenciales">
+            <img src="diferenciales/diferenciales.jpg" class="imagenDiferenciales">
 
         </div>
 
