--- a/productos.html
+++ b/productos.html
@@ -5,14 +5,17 @@
         <title>Productos - Barbería Alura</title>
         <link rel="stylesheet" href="productos.css">
     </head>
+    
     <body>
         <header>
             <h1><img src="imagenes/logo.png"></h1>
-            <ul>
-                <li>Home</li>
-                <li>Productos</li>
-                <li>Contacto</li>
-            </ul>
+            <nav>
+                <ul class="navegacion">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="productos.html"> Productos</a></li>
+                    <li><a href="contacto.html">Contacto</li>
+                </ul>
+            </nav>    
         </header>
     </body>
 </html>
