--- a/productos.html
+++ b/productos.html
@@ -2,20 +2,23 @@
 <html>
     <head>
         <meta charset="UFT-8">
-        <title>Productos - Barbería Alura</title>
+        <title>Productos - Barbería Alura</title>        
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="productos.css">
     </head>
     
     <body>
         <header>
-            <h1><img src="imagenes/logo.png"></h1>
-            <nav>
-                <ul class="navegacion">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="productos.html"> Productos</a></li>
-                    <li><a href="contacto.html">Contacto</li>
-                </ul>
-            </nav>    
+            <div class="caja">
+                <h1><img src="imagenes/logo.png"></h1>
+                <nav>
+                    <ul class="navegacion">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="productos.html"> Productos</a></li>
+                        <li><a href="contacto.html">Contacto</li>
+                    </ul>
+                </nav>
+            </div>    
         </header>
     </body>
 </html>
