--- a/productos.html
+++ b/productos.html
@@ -15,10 +15,32 @@
                     <ul class="navegacion">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="productos.html"> Productos</a></li>
-                        <li><a href="contacto.html">Contacto</li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>    
         </header>
+        <main>
+            <ul class="productos">     
+                <li>
+                    <h2>Cabello</h2>
+                    <img src="imagenes/cabello.jpg">
+                    <p class="productoDescrpcion">Con tijera o maquina, a gusto del cliente</p>
+                    <p class="productoPrecio">$ 10.00</p>                    
+                </li>                
+                <li>
+                    <h2>Barba</h2>
+                    <img src="imagenes/barba.jpg">
+                    <p class="productoDescrpcion">Corte y diseño profesional de barba</p> 
+                    <p class="productoPrecio">$ 8.00</p>                   
+                </li>                    
+                <li>
+                    <h2>Cabello+barba</h2>
+                    <img src="imagenes/cabello+barba.jpg">
+                    <p class="productoDescrpcion">Paquete completo de cabello y barba</p>
+                    <p class="productoPrecio">$ 15.00</p>                    
+                </li>
+            </ul> 
+        </main>
     </body>
 </html>
