captura de eventos y acciones con el mouse

--- a/productos.html
+++ b/productos.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
+
 <html>
     <head>
-        <meta charset="UFT-8">
+        <meta charset="UTF-8">
         <title>Productos - Barbería Alura</title>        
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="productos.css">
     </head>
-    
     <body>
         <header>
             <div class="caja">
                 <h1><img src="imagenes/logo.png"></h1>
                 <nav>
-                    <ul class="navegacion">
+                    <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="productos.html"> Productos</a></li>
+                        <li><a href="productos.html">Productos</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>    
         </header>
+
         <main>
             <ul class="productos">     
                 <li>
                     <h2>Cabello</h2>
                     <img src="imagenes/cabello.jpg">
-                    <p class="productoDescrpcion">Con tijera o maquina, a gusto del cliente</p>
+                    <p class="productoDescripcion">Con tijera o maquina, a gusto del cliente</p>
                     <p class="productoPrecio">$ 10.00</p>                    
                 </li>                
                 <li>
                     <h2>Barba</h2>
                     <img src="imagenes/barba.jpg">
-                    <p class="productoDescrpcion">Corte y diseño profesional de barba</p> 
+                    <p class="productoDescripcion">Corte y diseño profesional de barba</p> 
                     <p class="productoPrecio">$ 8.00</p>                   
                 </li>                    
                 <li>
                     <h2>Cabello+barba</h2>
                     <img src="imagenes/cabello+barba.jpg">
-                    <p class="productoDescrpcion">Paquete completo de cabello y barba</p>
+                    <p class="productoDescripcion">Paquete completo de cabello y barba</p>
                     <p class="productoPrecio">$ 15.00</p>                    
                 </li>
             </ul> 
