--- a/productos.html
+++ b/productos.html
@@ -43,5 +43,10 @@
                 </li>
             </ul> 
         </main>
+
+        <footer>
+            <img src="imagenes/logo-blanco.png">
+            <p class="copyright">&copy; Copyright Barbería Alura - 2020</p>
+        </footer>
     </body>
 </html>
