creacion de un formulario sencillo

--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,18 @@
             </div>    
         </header>
         <main>
-            test
+            <form>
+                <label for="nombreapellido">Nombre y apellido</label>
+                <input type="text" id="nombreapellido">
+
+                <label for="correoelectronico">Correo electronico</label>
+                <input type="text" id="correoelectronico">
+
+                <label for="telefono">Teléfono</label>
+                <input type="text" id="telefono">
+                
+                <input type="submit" value="Enviar formulario">
+            </form>
         </main>
         <footer>
             <img src="imagenes/logo-blanco.png">
