Mejorando el visual del boton enviar y transicion de color y escala en tiempo

--- a/contacto.html
+++ b/contacto.html
@@ -34,8 +34,6 @@
                 <label for="mensaje">Mensaje</label>
                 <textarea cols="70" rows="10" id="mensaje" class="input-padron" required></textarea>
 
-
-
                 <fieldset>
                     <legend>¿Como le gustaria que lo contactemos?</legend>
 
@@ -69,7 +67,7 @@
                
                 <label class="i"><input type="checkbox" checked>¿Le gustaria recibir novedades de la barberia Alura?</label>
 
-                <input type="submit" value="Enviar formulario">
+                <input type="submit" value="Enviar formulario" class="enviar">
 
             </form>
         </main>
